# mgate

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.xetex  autogen.sh  autopack.sh  configure.ac  httpd.conf.patch  install-www.sh  mgate.cfg  mgate.cfg.in.in  mgate.service.in.in  mgate.spec.in  monitor-cafe.spec  monitor-cafe.spec.in  monitor-hotel.spec  monitor-hotel.spec.in  monitor.cfg  monitor.spec.in
docs/: Makefile.am  monitor-docs.sgml  monitor-sections.txt  monitor.types
libdreamtop/: CString.cpp  CString.h  Makefile.am  Parameters.cpp  clients.cpp  config.cpp  functions.h  http_redirect.c  http_redirect.cpp  kmysql.cpp  kmysql.h  ksql.cpp  ksql.h  libdreamtop.c  libdreamtop.h  libmicrocai-macros.h  libmicrocai-types.h  libmicrocai.cpp  libmicrocai.h  load_module.cpp  log_printf.cpp  md5.h  my_log.cpp  my_log.h  protocol_handler.cpp
libdreamtop/KSQL/: kmysql.cpp  kmysql.h  ksqlite.cpp  ksqlite.h
libmicrocai/: Makefile.am  Parameters.cpp  README  clients.cpp  libmicrocai-functions.h  libmicrocai-macros.h  libmicrocai-queue.h  libmicrocai-types.h  libmicrocai.cpp  libmicrocai.h  my_log.cpp  my_log.h
modules/: Makefile  Makefile.am  README  http_redirect.c  kServer.cpp  kServer.hpp  klz.c  klz.cpp  kmsn.cpp  kmysql.cpp  kmysql.h  kqq.c  kqq.cpp  kroom.cpp  kurl.cpp
monitor/: Makefile.am  auto_update.cpp  http_redirect.cpp  ip_filter.c  ip_filter.cpp  main.cpp  module.conf  monitord  protocol_def.h  redirect_to_local_http.h
nat_helper/: Makefile.am  main.cpp
po/: Makevars  POTFILES.in  zh_CN.po
src/: Makefile.am  auto_update.cpp  clientmgr.c  clientmgr.h  clients.cpp  functions.h  g_socket_client_proxy.c  g_socket_client_proxy.h  global.c  global.h  gsqlconnect.c  gsqlconnect.h  gsqlconnect_mysql.c  gsqlconnect_mysql.h  gsqlconnect_sqlite3.c  gsqlconnect_sqlite3.h  gsqlresult.c  gsqlresult.h  htmlnode.c  htmlnode.h  http_server.c  http_server.h  i18n.h  ip_filter.c  ksql.c  ksql.cpp  ksql.h  ksql_old.h  ksql_static_template.h  libdreamtop.c  libdreamtop.h  libmicrocai-types.h  load_module.cpp  main.c  main.cpp  mgated.in  module.c  module.h  monitor_icon.h  monitord  (+13 more)
src/KSQL/: kmysql.cpp  ksqlite.cpp
src/dbclient/: gsqlconnect.h
src/http_server/: 404.html  Makefile.am  html_path_404.c  html_path_favicon.c  html_path_get_code.c  html_path_info.c  html_path_keepalive.c  html_path_log.c  html_path_login.c  html_path_static_file.c  html_paths.h  html_resource.c  htmlnode.c  htmlnode.h  http_server.c  http_server.h  http_server_excutejs.c  smsserver_connector.c  smsserver_connector.h
src/http_server/sms/: at_modem.h  sms.h  smsthread.c  smsthread.h  smstraffic.h
src/http_server/www/: css.css  getcode.html  getcode.xml  index.html  jheartbeat.js  processing.html  test.jsp  whyverifyyou.html
src/misc/: Makefile.am  g_socket_source.c  g_socket_source.h  getmime.c  mime.h  override.c  unzip.c  unzip.h  uthread.c  uthread.h
src/sms/: at_modem.c  sms.c  sms.cpp  sms.h  smsapi.c  smsapi.cpp  smsapi.h  smsthread.c  smsthread.h  smstraffic.cpp
src/socket/: g_socket_client_proxy.c  g_socket_client_proxy.h  g_socket_source.c  g_socket_source.h
src/sqlclient/: Makefile.am  gsqlconnect.c  gsqlconnect.h  gsqlconnect_mysql.c  gsqlconnect_mysql.h  gsqlconnect_sqlite3.c  gsqlconnect_sqlite3.h  gsqlresult.c  gsqlresult.h  mysql_static_template.h  sqlbackend.c  sqlite_static_template.h
